name:                roddles
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/khanage/roddles#readme
license:             BSD3
license-file:        LICENSE
author:              Khan Thompson
maintainer:          example@example.com
copyright:           2020 Khan Thompson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
library
  hs-source-dirs:      src
  exposed-modules:     Api, ConfigLoader, Types, TimedLogger
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async-refresh
                     , attoparsec
                     , bytestring
                     , classy-prelude
                     , exceptions
                     , fast-logger
                     , http-media
                     , lens
                     , monad-logger
                     , newtype
                     , servant-server
                     , optparse-applicative
                     , text
                     , time
                     , wai
                     , wai-extra
                     , warp
                     , wreq
                     , yaml
  default-language:    Haskell2010
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-extensions: ApplicativeDo
                    , BangPatterns
                    , ConstraintKinds
                    , DataKinds
                    , DefaultSignatures
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveLift
                    , DeriveTraversable
                    , DerivingStrategies
                    , EmptyCase
                    , ExistentialQuantification
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , InstanceSigs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , OverloadedStrings
                    , PatternSynonyms
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeFamilyDependencies
                    , TypeOperators

executable roddles-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , classy-prelude
                     , monad-logger
                     , newtype
                     , optparse-applicative
                     , roddles
  default-language:    Haskell2010

test-suite roddles-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , roddles
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/khanage/roddles
